fixed padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,8 @@ a:hover {
 }
 
 .paddingtopbottom {
-    padding: 5em 0px;
+    padding-top: 4em;
+    padding-bottom: 6.5em;
 }
 
 .profileimage {
